        de.wms2.mywms.picking.PickingUnitLoad replaced by de.wms2.mywms.picking.Packet
        de.linogistix.los.inventory.model.LOSStorageRequest replaced by de.wms2.mywms.transport.TransportOrder
        de.wms2.mywms.inventory.UnitLoadType got new attribute 'usages'
        de.wms2.mywms.address.Address is new

    - Removed some duplicate method implementations from entity services
    - Made API of entity services a little more consistent
    - InventoryBusiness replaces: LOSInventoryComponent, ManageInventoryBusiness, InventoryProcessFacade, LOSStorage
    - Replace CustomService calls of inventory posting methods with CDI events
    - Replace PackageType of UnitLoad to dedicated flags in UnitLoadType
    - Report got new backend and data structures
    - Document got new backend and data structures
    - Removed client from order strategy


    Bugfixes (for details have a look to the git repository)
    -------------------------------------------------------------------------------
    Call of toUniqueString() in BasicEntity subclasses must not call toString()


    Switch to Release 2.3
    -------------------------------------------------------------------------------
    - The replaced entities have similar attributes to the original ones. In most cases it will be easy to adapt.
    - Some duplicate implementations have been moved to only one service. If you get compile errors in your own modules try to use another service. E.g. StorageLocationEntityService instead of LOSStorageLocationService or QueryStorageLocationService
    - Deliverynote report .jrxml has to be adjusted to the changed data structures
    - Some customization user exits have been replaced by CDI events. Replace the on... Methods of your customization services by apropriate event observers.
    - Upgrade existing database structures manually. Automatic upgrade of the structure of existing databases may not work.
