@@ -92,7 +92,16 @@
                 <position>9</position>
             </value>
         </entry>
-
+        <entry>
+            <key>externalId</key>
+            <value>
+                <group>
+                    <name>main</name>
+                </group>
+                <hidden>true</hidden>
+                <position>99</position>
+            </value>
+        </entry>
 
         <entry>
 			<key>started</key>
