@@ -177,6 +177,16 @@
 				<position>1</position>
 			</value>
 		</entry>
+        <entry>
+            <key>externalId</key>
+            <value>
+                <group>
+                    <name>main</name>
+                </group>
+                <hidden>true</hidden>
+                <position>99</position>
+            </value>
+        </entry>
 
     </descriptions>
 	<groups>
