@@ -101,6 +101,17 @@
                 <position>31</position>
             </value>
         </entry>
+		<entry>
+			<key>operator</key>
+			<value>
+				<group>
+					<name>main</name>
+				</group>
+				<hidden>false</hidden>
+				<position>32</position>
+			</value>
+		</entry>
+
         <entry>
 			<key>stockUnitId</key>
             <value>
@@ -122,16 +133,6 @@
             </value>
         </entry>
 
-		<entry>
-			<key>operator</key>
-			<value>
-				<group>
-					<name>main</name>
-				</group>
-				<hidden>true</hidden>
-				<position>42</position>
-			</value>
-		</entry>
 		<entry>
 			<key>state</key>
 			<value>
