@@ -65,6 +65,11 @@ public class AdviceLine extends BasicEntity {
 	private String externalNumber;
 
 	/**
+	 * An optional id to give an association to other systems
+	 */
+	private String externalId;
+
+	/**
 	 * Current state of the process
 	 */
 	@Column(nullable = false)
@@ -168,6 +173,14 @@ public class AdviceLine extends BasicEntity {
 
 	public void setExternalNumber(String externalNumber) {
 		this.externalNumber = externalNumber;
+	}
+
+	public String getExternalId() {
+		return externalId;
+	}
+
+	public void setExternalId(String externalId) {
+		this.externalId = externalId;
 	}
 
 	public int getState() {
