@@ -660,6 +660,7 @@ errorCode=Fehler-Nr.
 expectedDelivery=Erwartetes Lieferdatum
 expectedDelivery_DESCR=erwartetes Lieferdatum
 expireBatch=Alte Charge vernichten
+externalId=Externe ID
 extinguish=vernichten
 fax=Fax
 field=Feld
