@@ -663,6 +663,7 @@ errorCode=Error code
 expectedDelivery=Expected date of delivery
 expectedDelivery_DESCR=Expected date of delivery
 expireBatch=Expire old batch
+externalId=External ID
 extinguish=extinguish
 fax=Fax
 field=Field
