@@ -12,7 +12,7 @@ AbstractCenterPanel.createButton.text=Create
 AbstractCenterPanel.dateLabel.text=Receipt Date
 AbstractCenterPanel.editButton.mnemonic=e
 AbstractCenterPanel.editButton.text=Edit
-AbstractCenterPanel.externNumberLabel.text=Delivery Number
+AbstractCenterPanel.externNumberLabel.text=Deliverynote
 AbstractCenterPanel.finishButton.mnemonic=i
 AbstractCenterPanel.finishButton.text=Finish
 AbstractCenterPanel.gateLabel=gateLabel
@@ -126,7 +126,7 @@ Gate=Gate
 GoingToTransferStockUnit=Remove reservation from Stock Unit
 GoodsReceipt=Goods Receipt
 GoodsreceiptCenterPanel.addReceiptPositions=Add receipt position
-GoodsreceiptCenterPanel.deliverer=Deliverer
+GoodsreceiptCenterPanel.deliverer=Carrier
 GoodsreceiptCenterPanel.finishGoodsReceipt=Finish goods receipt
 GoodsreceiptCenterPanel.gateLabel=Gate
 GoodsreceiptCenterPanel.infoLabel.creation=Please save Goods Receipt
